Wed Nov  3 15:41:16 UTC 2010  Charles Calkins  <calkinsc@ociweb.com>

        * modules/VC7WorkspaceCreator.pm:
        
          Temporarily removed wix "make_group" flag.

Wed Nov  3 15:37:12 UTC 2010  Charles Calkins  <calkinsc@ociweb.com>

        * modules/CDT6WorkspaceCreator.pm:
        * modules/TemplateParser.pm:
        * modules/WixWorkspaceCreator.pm:

          Temporarily removed wix "make_group" flag.

Wed Nov  3 14:53:37 UTC 2010  Charles Calkins  <calkinsc@ociweb.com>

        * docs/templates/wix.txt:
        * modules/CDT6WorkspaceCreator.pm:
        * modules/TemplateParser.pm:
        * modules/VC7WorkspaceCreator.pm:
        * modules/WixProjectCreator.pm:
        * modules/WixWorkspaceCreator.pm:
        * templates/wix.mpd:
        * templates/wix.mpt:
        * templates/wixcs.mpd:
        * templates/wixcs.mpt:

          Extended the "wix" project type to support C#, decorated names,
          internationalized .NET resources, and generation of components
          and groups based on configurations and platforms.

Wed Nov  3 14:31:32 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * modules/StringProcessor.pm:
        * modules/TemplateInputReader.pm:

          Allow a - character in a template variable scope name.

        * templates/wb30dll.mpt:

          Use the - character in the buildspec scoped names to match
          the names used by Wind River Workbench.

Mon Nov  1 18:21:59 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * modules/StringProcessor.pm:

          Added a "merge" function for appending non-duplicates onto a list.

        * modules/DirectoryManager.pm:
        * modules/ProjectCreator.pm:

          Use the StringProcessor::merge() function where applicable.
          Fixed a bug where the custom type explicit dependencies (<<) were not
          tracked separately for each type.
          Added <%pathsep%> as a pseudo-variable (; or :).